version updates, ledger fix, Runs on JDK11